--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Escoly</title>
+    <link rel="icon" href="css/img/Logo-Escoly sin letras.png" type="image/icon type">
     <link rel="stylesheet" href="css/cssindex.css">
     <link rel="stylesheet"
         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
@@ -49,7 +50,6 @@
 
     <h2 class="" style="text-align: center;">Caracteristicas de Escoly</h2>
     <section class="caracteristicas">
-
         <div class="caracteristicasGral">
             <div>
                 <span class="las la-check-double"></span>
@@ -60,7 +60,6 @@
                     directa,
                     por lo que aplicación solo será el medio por el cual se asegure la integridad de los menores.</h3>
             </div>
-
         </div>
         <div class="caracteristicasGral">
             <div>
@@ -76,8 +75,6 @@
                     autorizadas para la recogida del niño y
                     confirmaciones a fin de garatozar mayor seguridad</h3>
             </div>
-
-
         </div>
         <div class="caracteristicasGral">
             <div>
@@ -110,8 +107,6 @@
                     igual manera se tendrá que verificar la llegada
                     con su tutor mediante Escoly.</h3>
             </div>
-
-
         </div>
         <div class="caracteristicasGral">
             <div>
@@ -127,7 +122,6 @@
                     padre de familia, se desplegarán números
                     de emergencia y notificara al profesor, al padre y a los directivos sobre el atraso del niño</h3>
             </div>
-
         </div>
         <div class="caracteristicasGral">
             <div>
@@ -142,46 +136,21 @@
                     momento con los tutores anteriormente
                     autorizados por el titular.</h3>
             </div>
-
         </div>
-
+        <div class="caracteristicasGral">
+            <div>
+                <span class="las la-map-marker"></span>
+            </div>
+            <div class="caracteristicasinfo">
+                <h2 class="">Seguimiento en tiempo real</h2>
+                <h3 class="">En caso de contar con un dispositivo con GPS, los padre pueden seguir la ubicación en tiempo
+                    real de su hijo, para garantizar su seguridad y monitorizar momentos clave del día como la entrada y
+                    la salida .</h3>
+                </h3>
+            </div>
+        </div>
     </section>
 
-    <h2 class="" style="text-align: center;">Nuestro Equipo</h2>
-    <section class="caracteristicas2">
-        <div class="caracteristicasGral2">
-            <div>
-                <span><img src="css/img/Diego.jpg"></span>
-            </div>
-        </div>
-        <div class="caracteristicasGral2">
-            <div>
-                <span><img src="css/img/Sui.png"></span>
-            </div>
-        </div>
-        <div class="caracteristicasGral2">
-            <div>
-                <span><img src="css/img/jesse.png"></span>
-            </div>
-        </div>
-        <div class="caracteristicasGral2">
-            <div>
-                <span><img src="css/img/ian.png"></span>
-            </div>
-        </div>
-        <div class="caracteristicasGral2">
-            <div>
-                <span><img src="css/img/pozoz.png"></span>
-            </div>
-        </div>
-        <div class="caracteristicasGral2">
-            <div>
-                <span><img src="css/img/itz.jpg"></span>
-            </div>
-        </div>
-
-
-    </section>
 </body>
 
 </html>
